# kp_sync

./: Cargo.toml  README.md
.github/workflows/: build.yml  check.yml
src/: lib.rs
src/addon/: mod.rs
src/api/: mod.rs
src/api/gw2/: mod.rs
src/api/kp/: mod.rs
src/api/kp/cooldown/: mod.rs
src/api/kp/kp_response/: mod.rs
src/api/kp/kp_response/failure_reason/: mod.rs
src/api/kp/linked_ids/: mod.rs
src/api/kp/refresh/: mod.rs
src/api/kp/refresh/request/: mod.rs
src/config/: mod.rs
src/config/killproof_identifiers/: mod.rs
src/config/notifications/: mod.rs
src/context/: clipboard.rs  mod.rs
src/context/scheduled_refresh/: mod.rs
src/context/ui/: mod.rs
src/kp/: mod.rs
src/kp/api/: mod.rs
src/kp/api/cert/: killproof.pem
src/kp/api/kp_response/: mod.rs
src/kp/api/linked_ids/: mod.rs
src/kp/api/refresh/: mod.rs
src/render/: mod.rs
src/render/main/: mod.rs
src/render/options/: mod.rs
src/render/options/advanced_tab/: mod.rs
src/render/options/general_tab/: mod.rs
src/render/quick_access/: mod.rs
src/thread/: mod.rs
